# ultragateV2

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  README.md  configure.ac
.tx/: config
build-aux/m4/: bitcoin_qt.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  ultragate-qt.pro
contrib/bitrpc/: bitrpc.py
contrib/debian/: control  ultragate-qt.desktop
contrib/devtools/: README.md  copyright_header.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/init/: README.md
contrib/linearize/: linearize-hashes.py
contrib/macdeploy/: macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_test.txt
contrib/spendfrom/: spendfrom.py
depends/: .gitignore  README.md
doc/: Doxyfile.in  README.md  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md
doc/gitian-building/: gitian-building-mac-os-sdk.md  gitian-setup-fedora.md  gitian-setup-mac.md  gitian-setup-ubuntu.md  gitian-setup-windows.md
doc/man/: ultragate-cli.1  ultragate-qt.1  ultragate-tx.1  ultragated.1
doc/release-notes/: release-notes-2.1.5.md  release-notes-2.2.1.md  release-notes-2.3.0.md  release-notes-2.3.1.md  release-notes-3.0.0.md  release-notes-3.0.2.md  release-notes-3.0.4.md  release-notes-3.0.5.1.md  release-notes-3.0.5.md  release-notes-3.0.6.md  release-notes-3.1.0.1.md  release-notes-3.1.0.2.md  release-notes-3.1.0.md  release-notes-3.1.1.md  release-notes-3.2.0.md  release-notes-3.3.0.md  release-notes-3.4.0.md  release-notes-4.0.0.md  release-notes-4.0.1.md
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.test.include  activemasternode.cpp  addressbook.cpp  addressbook.h  addrman.h  amount.cpp  amount.h  base58.cpp  base58.h  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  core_write.cpp  denomination_functions.h  hash.h  init.cpp  init.h  invalid_outpoints.json.h  invalid_serials.json.h  kernel.cpp  kernel.h  key.h  key_io.h  keystore.h  (+47 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp
src/consensus/: consensus.h  params.h  tx_verify.cpp  tx_verify.h  upgrades.cpp  upgrades.h  (+2 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  transactionfilterproxy.cpp  transactionfilterproxy.h  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  transactiontablemodel.h  ultragate.cpp  ultragate.qrc  ultragate_locale.qrc  ultragatestrings.cpp  utilitydialog.cpp  walletmodel.cpp  walletmodel.h
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/locale/: ultragate_de.ts  ultragate_en.ts  ultragate_en_US.ts  ultragate_es.ts  ultragate_es_ES.ts  ultragate_fr_FR.ts  ultragate_hr_HR.ts  ultragate_it.ts  ultragate_ko_KR.ts  ultragate_nl.ts  ultragate_pl.ts  ultragate_ru.ts  ultragate_tr.ts  ultragate_zh_CN.ts
src/qt/res/css/: default.css
src/qt/test/: test_main.cpp  uritests.cpp
src/qt/ultragate/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  focuseddialog.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  guitransactionsutils.cpp  guitransactionsutils.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  mninfodialog.h  mnmodel.cpp  mnrow.cpp  myaddressrow.cpp  navmenuwidget.cpp  navmenuwidget.h  optionbutton.cpp  pfborderimage.h  prunnable.h  (+33 more)
src/qt/ultragate/forms/: addresseswidget.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/ultragate/res/css/: style_dark.css  style_light.css
src/qt/ultragate/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/ultragate/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
(+203 files in other folders)
